# sql2spl

./: .gitignore  README.md  justfile  pyproject.toml
sql2spl/: queryErrorListener.py  queryNode.py  queryTranslator.py  queryTranslatorVisitor.py
sql2spl/parser/: Sql.g4  SqlListener.py  sql.interp  sql.tokens  sqlLexer.interp  sqlLexer.py  sqlParser.py  sqlVisitor.py
tests/: query_translator_test.py
